# coro-detect

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  README.ru.md  coverage.json  docker-compose.yml  dvc.yaml  index.html  mkdocs.yml  model_card.md.j2  objects.inv  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  docs.yml  lint.yml  release.yml  test.yml
api/: index.html
architecture/: index.html
configs/: config.yaml  train.yaml
configs/data/: default.yaml
configs/experiment/: baseline.yaml  sota.yaml
configs/model/: baseline.yaml  default.yaml  main.yaml
configs/trainer/: default.yaml
data/processed/: test.parquet.dvc  train.parquet.dvc  val.parquet.dvc
data/raw/: .gitignore
data/sample/: sample.csv  sample.json
data/widget/: sample_patient.json
docs/: api.md  architecture.md  index.md  model_card.md.j2  serving.md  training.md
docs/legacy/: README.md  original_dataset.csv
legacy/: index.html
models/: random_forest.pkl
notebooks/: 01_eda.ipynb  02_benchmark.ipynb  02_demo.ipynb  training.ipynb
scripts/: build_sample_data.py  export_hf_native.py  publish_to_hf.py  sync_data.sh  train_all.py
search/: search_index.json
serving/: index.html
src/cardio_risk_rf/: __init__.py  __main__.py  explain.py
src/cardio_risk_rf/data/: __init__.py  cardio.py  dataset.py  framingham.py  prepare.py
src/cardio_risk_rf/evaluation/: calibration.py  evaluate.py  metrics.py  summary.py
src/cardio_risk_rf/inference/: predict.py
src/cardio_risk_rf/models/: __init__.py  factory.py  sklearn_pipeline.py
src/cardio_risk_rf/serving/: dependencies.py  main.py  routes.py  schemas.py
src/cardio_risk_rf/training/: train.py
src/cardio_risk_rf/utils/: logging.py  seed.py
tests/: test_data.py  test_evaluation.py  test_explain.py  test_inference.py  test_model.py  test_models.py  test_serving.py  test_sync_data.py  test_training.py
training/: index.html
