[project]
name = "cardio_risk_rf"
version = "0.1.0"
description = "Production-grade cardiovascular risk tabular classifier."
requires-python = ">=3.12"
authors = [
  { name = "Daniil Kiselyov", email = "your-email@example.com" },
]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "pyyaml>=6.0.1",
  "structlog>=24.1.0",
  "rich>=13.7.0",
  "jinja2>=3.1.0",
  "numpy>=1.26.0",
  "lightgbm>=4.5,<5.0",
  "shap>=0.46,<1.0",
  "optuna>=4.0,<5.0",
  "scikit-learn>=1.5,<2.0",
  "pandas>=2.2,<4.0",
  "pyarrow>=18,<19",
  "joblib>=1.4,<2.0",
  "matplotlib>=3.9,<4.0",
  "kaggle>=2.0,<3.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.11",
  "mypy==1.20.1",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "pre-commit==4.*",
  "deptry==0.25.1",
  "bandit==1.9.4",
  "interrogate==1.7.0",
  "codespell==2.4.2",
  "pandas-stubs",
  "types-PyYAML",
]
serving = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "huggingface-hub>=0.22.0",
]
tracking = [
  "mlflow>=2.11.0",
  "dvc>=3.48.0",
  "wandb>=0.16.0",
]
docs = [
  "jupyter>=1.1.1",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "nbconvert>=7.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cardio_risk_rf"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["notebooks/*.ipynb", "outputs", "mlruns"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests use ML convention `X` for feature matrices and long reason strings.
"tests/**" = ["N806", "E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
[[tool.mypy.overrides]]
module = ["lightgbm.*", "shap.*", "optuna.*", "sklearn.*", "joblib.*", "matplotlib.*", "kaggle.*"]
ignore_missing_imports = true

[tool.deptry]
# DEP001: torch is an optional import in template-inherited utils/seed.py only
# DEP002: hydra-core/omegaconf/pyyaml/rich referenced indirectly via Hydra configs;
#         pyarrow used transparently by pandas Parquet IO; kaggle shelled out via sync_data.sh
# DEP003: cardio_risk_rf imported by its own scripts+notebooks, not a transitive dep
# DEP004: optional dependency groups (serving, tracking, docs) are intentional
ignore = ["DEP001", "DEP002", "DEP003", "DEP004"]
extend_exclude = ["notebooks"]
known_first_party = ["cardio_risk_rf"]

[tool.bandit]
# B101: asserts in tests, B311: non-crypto random for demo samples,
# B615: HF snapshot_download revision pin is a user-supplied arg, not static;
#       template-inherited utility used by end-users with their own HF pins.
skips = ["B101", "B311", "B615"]

[tool.interrogate]
fail-under = 30
exclude = ["tests", "notebooks", "outputs", "mlruns", "docs"]

[tool.codespell]
skip = "uv.lock,*.ipynb,notebooks,outputs,mlruns"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term --cov-report=xml --cov-fail-under=10"

[tool.coverage.run]
source = ["src/cardio_risk_rf"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
